# PhotoShop

./: .dockerignore  .env.example  .from-root  .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml
models/: load_and_reduce.py
src/: app.py
src/components/: Generation_Emoji.py  Removed_background.py  UploadModels.py
src/constants/: __init__.py
src/entity/: S3_connect.py
src/exceptions/: __init__.py
src/logger/: __init__.py
src/models/: BgRemover.py  EmojiModel.py
src/routes/: Bg_router.py  Emoji_router.py  pages.py
src/tests/: Emoji_prediction.py  Removed_bg.py  loader_model.py  uploading_model.py
src/utils/: asyncHandler.py  loader_functions.py  main_utils.py
static/: baseTemplate.css  bg.css  bg.js  emoji.css  emoji.js
templates/: base.html  bg.html  emoji.html  home.html
