[project]
name = "photoshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.61",
    "dill>=0.4.1",
    "dotenv>=0.9.9",
    "from-root>=1.3.0",
    "kagglehub>=1.0.0",
    "mlflow>=2.20.2",
    "opencv-python>=4.13.0.92",
    "pandas>=2.0.0,<3",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "torch>=2.10.0",
]
